--- a/Android_App_Code/app/src/main/res/values/strings.xml
+++ b/Android_App_Code/app/src/main/res/values/strings.xml
@@ -40,4 +40,11 @@
     <string name="your_groups">Your Groups</string>
     <string name="your_groups_will_show_here">Your Groups will show here</string>
     <string name="profile">Profile</string>
+    <string name="_1">1.</string>
+    <string name="module_name">Differential Equations</string>
+    <string name="course_code">BMAT201L</string>
+    <string name="modules">Modules:</string>
+    <string name="_10">10</string>
+    <string name="proceed">Proceed</string>
+    <string name="members_present">Members Present:</string>
 </resources>
