Minor UI Changes

--- a/Android_App_Code/app/src/main/res/values/strings.xml
+++ b/Android_App_Code/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="_10">10</string>
     <string name="proceed">Proceed</string>
     <string name="members_present">Members Present:</string>
+    <string name="sign_out">Sign Out</string>
 </resources>
